added jwt authentication

--- a/views/pages/index.handlebars
+++ b/views/pages/index.handlebars
@@ -1,2 +1,1 @@
-<h1> Welcome </h1>
-<p> You've worked {{shifts.length}} shifts. Average shift earnings: ${{avgShiftTotal}} </p>
+<p> placeholder </p>
